--- a/ThetaRamadan2020/Views/Shared/_Layout.cshtml
+++ b/ThetaRamadan2020/Views/Shared/_Layout.cshtml
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ThetaRamadan2020</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/StyleSheet.css" />
 </head>
 <body>
     <header>
@@ -17,7 +19,15 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
+                    @*  <partial name="_LoginPartial" />*@
+                    <p>
+                        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">Register</button>
+                        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalLoginForm">
+                            Login
+                        </button>
+                    </p>
+
+
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -31,10 +41,112 @@
         </nav>
     </header>
     <div class="container">
+        <div class="toast float-lg-right " role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="mr-auto">WellCome</strong>
+                <small>11 mins ago</small>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="toast-body">
+                You are Successfully Registerd!
+            </div>
+        </div>
+
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
+    @*Login Modal*@
+    <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body form-group mx-3">
+                    <div class="md-form mb-5">
+                        <span class="fa fa-envelope prefix grey-text"></span>
+                        <input type="email" id="defaultForm-email" class="form-control validate">
+                        <label data-error="wrong" data-success="right" for="defaultForm-email">Your email</label>
+                    </div>
+
+                    <div class="md-form form-group mb-4">
+                        <span class="fa fa-lock prefix grey-text"></span>
+                        <input type="password" id="defaultForm-pass" class="form-control validate">
+                        <label data-error="wrong" data-success="right" for="defaultForm-pass">Your password</label>
+                    </div>
+
+                </div>
+                <div class="modal-footer d-flex justify-content-center">
+                    <button class="btn btn-default">Login</button>
+                    <button class="btn btn-default"><a href="/Users/ForgetPassword">ForgetPassword</a></button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    @*Modal to register another customer *@
+
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Register Newe Customer</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form asp-action="Create">
+
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-group">
+                            <label for="name" class="control-label">Name</label>
+                            <input id="name" name="name" class="form-control" />
+                            <span id="n" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="email" class="control-label">Email</label>
+                            <input id="email" name="email" class="form-control" />
+                            <span id="em" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="control-label">Password</label>
+                            <input id="password" name="password" class="form-control" />
+                            <span id="pass" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="mobile" class="control-label">Mobile</label>
+                            <input id="mobile" name="mobile" class="form-control" />
+                            <span id="mob" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="role" class="control-label">UserRole</label>
+                            <select id="role" class="form-control">
+                                <option value="Staff" selected>Staff</option>
+                                <option value="Admin">Admin</option>
+                            </select>
+                            <span id="rol" class="text-danger"></span>
+                        </div>
+                    </form>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" id="register" name="register" class="btn btn-primary">Register</button>
+                    <button type="button" id="registerStaff" name="registerStaff" class="btn btn-primary">RegisterStaffOrAdmin</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <footer class="border-top footer text-muted">
         <div class="container">
@@ -43,7 +155,72 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="//cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+    <script src="https://kit.fontawesome.com/293c70917c.js" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script>
+        //Registor customer through ajax
+        $("#register").click(function () {
+            $.ajax({
+                beforeSend: function () { alert($("#name").val()); },
+                url: '/Users/RegisterCustomer',
+                type: "POST",
+                data: {
+                    name: $("#name").val(),
+                    email: $("#email").val(),
+                    password: $("#password").val(),
+                    mobile: $("#mobile").val()
+
+                },
+                success: function (h) {
+                    if (h == "created" || h == "Created") {
+                        $(".modal").modal('hide');
+                        $(".toast").addClass("show");
+                        $("<tr><td>'" + $("#name").val() + "'</td><td>'" + $("#email").val() + "'</td><td>'" + $("#password").val() + "'</td><td>Customer</td><td>'" + $("#password").val() + "'</td><td>" + $("#mobile").val() + "</td></tr>").appendTo("#myTable");
+                    } else {
+                        alert(h);
+                    }
+
+                },
+                error: function (error) {
+                    alert(error);
+                    alert("er");
+                }
+            });
+        });
+    </script>
+    <script>
+        //Registor Staff or Admin through ajax
+        $("#registerStaff").click(function () {
+            $.ajax({
+                beforeSend: function () { alert($("#name").val()); },
+                url: '/Users/RegisterStaffOrAdmin',
+                type: "POST",
+                data: {
+                    name: $("#name").val(),
+                    email: $("#email").val(),
+                    password: $("#password").val(),
+                    mobile: $("#mobile").val(),
+                    role: $("#role").val()
+
+                },
+                success: function (h) {
+                    if (h == "created" || h == "Created") {
+                        $(".modal").modal('hide');
+                        $(".toast").addClass("show");
+                        $("<tr><td>'" + $("#name").val() + "'</td><td>'" + $("#email").val() + "'</td><td>'" + $("#password").val() + "'</td><td>Customer</td><td>'" + $("#password").val() + "'</td><td>" + $("#mobile").val() + "</td></tr>").appendTo("#myTable");
+                    } else {
+                        alert(h);
+                    }
+
+                },
+                error: function (error) {
+                    alert(error);
+                }
+            });
+        });
+    </script>
+
     @RenderSection("Scripts", required: false)
 </body>
 </html>
