--- a/ThetaRamadan2020/Views/Users/Delete.cshtml
+++ b/ThetaRamadan2020/Views/Users/Delete.cshtml
@@ -11,41 +11,76 @@
     <h4>Users</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.UserRole)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.UserRole)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Password)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Password)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Mobile)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Mobile)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
+        <h3 id="send">ddd</h3>
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+@section Scripts{
+
+    <script>
+
+    $("#send").click(function () {
+
+      //  var user = { id: $("#Id").val(), name: $("#Name").val(), email: $("#Email").val(), password: $("#Password").val(), userrole: $("#UserRole").val(),mobile: $("#Mobile").val(), saledItems: [] };
+       // user = JSON.stringify(user);
+        var id1 = $("#Id").val();
+        $.ajax({
+            beforeSend: function () { alert(user); },
+            type: "DELETE",
+            url: 'https://localhost:44391/api/Users1/'+id1,
+            dataType: "json",
+           
+            contentType: "application/json",
+            success: function (h) {
+                alert("sucess");
+                document.location = "/users/index";
+            },
+            error: function (error) {
+                alert("err");
+            }
+
+        });
+
+        });
+
+    </script>
+
+
+}
+
+
