--- a/ThetaRamadan2020/Views/Users/Index.cshtml
+++ b/ThetaRamadan2020/Views/Users/Index.cshtml
@@ -1,15 +1,28 @@
 ﻿@model IEnumerable<ThetaRamadan2020.Models.Users>
 
+
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>All Customers</h1>
+<div class="toast float-lg-right " role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+        <strong class="mr-auto">WellCome</strong>
+        <small>11 mins ago</small>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="toast-body">
+        You are Successfully Registerd!
+    </div>
+</div>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal-1">Register</button>
 </p>
-<table class="table">
+<table class="table" id="myTable">
     <thead>
         <tr>
             <th>
@@ -31,29 +44,161 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserRole)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Password)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Mobile)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserRole)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Password)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Mobile)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+@*Modal to register another customer *@
+
+
+<div class="modal fade" id="exampleModal-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Register Newe Customer</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form asp-action="Create">
+
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label for="name" class="control-label">Name</label>
+                        <input id="name" name="name" class="form-control" />
+                        <span id="n" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="control-label">Email</label>
+                        <input id="email" name="email" class="form-control" />
+                        <span id="em" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="control-label">Password</label>
+                        <input id="password" name="password" class="form-control" />
+                        <span id="pass" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="mobile" class="control-label">Mobile</label>
+                        <input id="mobile" name="mobile" class="form-control" />
+                        <span id="mob" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="role" class="control-label">UserRole</label>
+                        <select id="role" class="form-control">
+                            <option value="Staff" selected>Staff</option>
+                            <option value="Admin">Admin</option>
+                        </select>
+                        <span id="rol" class="text-danger"></span>
+                    </div>
+                </form>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" id="register" name="register" class="btn btn-primary">Register</button>
+                <button type="button" id="registerStaff" name="registerStaff" class="btn btn-primary">RegisterStaffOrAdmin</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+@section Scripts
+{
+    <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+            $("#exampleModal").modal('show');
+        });
+    </script>
+
+    <script>
+        //Registor customer through ajax
+        $("#register").click(function () {
+            $.ajax({
+                beforeSend: function () { alert($("#name").val()); },
+                url: '/Users/RegisterCustomer',
+                type: "POST",
+                data: {
+                    name: $("#name").val(),
+                    email: $("#email").val(),
+                    password: $("#password").val(),
+                    mobile: $("#mobile").val()
+
+                },
+                success: function (h) {
+                    if (h == "created" || h == "Created") {
+                        $(".modal").modal('hide');
+                        $(".toast").addClass("show");
+                        $("<tr><td>'" + $("#name").val() + "'</td><td>'" + $("#email").val() + "'</td><td>'" + $("#password").val() + "'</td><td>Customer</td><td>'" + $("#password").val() + "'</td><td>" + $("#mobile").val() + "</td></tr>").appendTo("#myTable");
+                    } else {
+                        alert(h);
+                    }
+
+                },
+                error: function (error) {
+                    alert(error);
+                    alert("er");
+                }
+            });
+        });
+    </script>
+    <script>
+        //Registor Staff or Admin through ajax
+        $("#registerStaff").click(function () {
+            $.ajax({
+                beforeSend: function () { alert($("#name").val()); },
+                url: '/Users/RegisterStaffOrAdmin',
+                type: "POST",
+                data: {
+                    name: $("#name").val(),
+                    email: $("#email").val(),
+                    password: $("#password").val(),
+                    mobile: $("#mobile").val(),
+                    role: $("#role").val()
+
+                },
+                success: function (h) {
+                    if (h == "created" || h == "Created") {
+                        $(".modal").modal('hide');
+                        $(".toast").addClass("show");
+                        $("<tr><td>'" + $("#name").val() + "'</td><td>'" + $("#email").val() + "'</td><td>'" + $("#password").val() + "'</td><td>Customer</td><td>'" + $("#password").val() + "'</td><td>" + $("#mobile").val() + "</td></tr>").appendTo("#myTable");
+                    } else {
+                        alert(h);
+                    }
+
+                },
+                error: function (error) {
+                    alert(error);
+                }
+            });
+        });
+    </script>
+
+
+}
